WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22635
Crash when destroying element being animated in its start animation event
https://bugs.webkit.org/show_bug.cgi?id=22635
Summary
Crash when destroying element being animated in its start animation event
Simon Fraser (smfr)
Reported
2008-12-03 14:34:34 PST
We should make LayoutTests for element destruction inside onAnimationStart/onAnimationIteration event handler callbacks (e.g. see
bug 22499
).
Attachments
Patch, including LayoutTest files
(22.94 KB, patch)
2008-12-03 17:56 PST
,
Chris Marrin
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Marrin
Comment 1
2008-12-03 17:40:38 PST
In making the testcases for element destruction in the iteration and start events, I got a crash in the start event case. I'm fixing it now. I'll send in the new tests along with the fix.
Chris Marrin
Comment 2
2008-12-03 17:56:21 PST
Created
attachment 25729
[details]
Patch, including LayoutTest files
Dave Hyatt
Comment 3
2008-12-05 13:22:34 PST
Comment on
attachment 25729
[details]
Patch, including LayoutTest files r=me
Chris Marrin
Comment 4
2008-12-05 17:42:35 PST
Sending LayoutTests/ChangeLog Adding LayoutTests/animations/animation-iteration-event-destroy-renderer-expected.txt Adding LayoutTests/animations/animation-iteration-event-destroy-renderer.html Adding LayoutTests/animations/animation-start-event-destroy-renderer-expected.txt Adding LayoutTests/animations/animation-start-event-destroy-renderer.html Sending WebCore/ChangeLog Sending WebCore/page/animation/AnimationBase.cpp Sending WebCore/page/animation/AnimationController.cpp Sending WebCore/page/animation/CompositeAnimation.cpp Sending WebCore/page/animation/CompositeAnimation.h Transmitting file data .......... Committed revision 39059.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug